Fix object args